# ChangeLog for net-p2p/ncdc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Aug 2011; Michael Weber <xmw@gentoo.org> ncdc-9999.ebuild:
  dep update

  16 Jul 2011; Michael Weber <xmw@gentoo.org> ncdc-9999.ebuild:
  fixed deps

*ncdc-9999 (16 Jul 2011)

  16 Jul 2011; Michael Weber <xmw@gentoo.org> +ncdc-9999.ebuild, +metadata.xml:
  Initial import
