@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD ncdc-9999.ebuild 597 RMD160 2f4131edca79d5ae2f61434b164e801c41daa250 SHA1 b8eee02c71fe42084f2fa13a61f352854bf46044 SHA256 881d16dbf022bcaf6042fc10902b113455894488dab7c9c54d14b808d9ec55e8
-MISC ChangeLog 393 RMD160 d7f9429b777750e5779d6662caac9be7aab55928 SHA1 2bafe3c51658f0cee4a506e88d2110096a76d880 SHA256 80c345cf3c6c21a2d41c10ba59d41071e7c7de3780f961db04947e9351d732b7
+DIST ncdc-0.5.tar.gz 215380 RMD160 1cb16288044ff36979827a9d9c56f6f36eab1551 SHA1 de88f2420f526add10838526ddb7c07b8555a510 SHA256 0d74dffc615e46312696868010ccce9415a55d774daa7b6b0e3c9831230ec359
+EBUILD ncdc-0.5.ebuild 608 RMD160 26e7c71bda7546bfcb296283525e5dcf850c1c7a SHA1 a945e67250b4ea18597e4b5e9f3334ee8e13459a SHA256 be313d9dcd478bd3f12e07cb18fa5200376a0816a9db6407c849ba9b5d8471c0
+EBUILD ncdc-9999.ebuild 607 RMD160 b097f96a78bc9506470ead5774d45f90d94aab23 SHA1 6e78f5aa22773d81f8c26038ed34b0bac9c32716 SHA256 677f6b0b37fa7ff12beae053cb849f8d9dfc52b81d1533ff4fb973b86498ce0f
+MISC ChangeLog 558 RMD160 e7b004076e68c0da2981f93469bae0ddb8459044 SHA1 1d7b8975423eb193ce3be614b31a66f6b8d32076 SHA256 3720a32976ea2040c3377f207e48a311504a43f06c55794ac8f0d7b72dd7933c
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk45OvQACgkQknrdDGLu8JCZxQD9EPgsDjI42KhqPaytX0Hv1RgZ
-w+3rKbbZTEZRDD//A9UA/jSUPJ7sHePWjCW5rlybsGnB5F/4PVXwjN4lyqOpQiyr
-=KUWp
+iF4EAREIAAYFAk45RdwACgkQknrdDGLu8JA9QgD9EA4Rp79ms/muBGBPMZJbEcyF
+4VFFGlq0dBrER01Kn4UA/RnUqjyCsX96BJ2w+G3j8wlS2PGeap/Baihz9YLXjpBF
+=Q2Cw
 -----END PGP SIGNATURE-----
